[gd_scene load_steps=34 format=2]

[ext_resource path="res://scripts/gameStage.gd" type="Script" id=1]
[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Mont-ExtraLightDEMO.otf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/39.png" type="Texture" id=4]
[ext_resource path="res://sprites/SlowwButton.png" type="Texture" id=5]
[ext_resource path="res://scripts/slowDucks.gd" type="Script" id=6]
[ext_resource path="res://fonts/moon_get-Heavy.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://sprites/Lazer.png" type="Texture" id=8]
[ext_resource path="res://scripts/addLazer.gd" type="Script" id=9]
[ext_resource path="res://sprites/imuneButton.png" type="Texture" id=10]
[ext_resource path="res://scripts/imuneDuck.gd" type="Script" id=11]
[ext_resource path="res://sounds/whoosh3.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/background ambiance.ogg" type="AudioStream" id=13]
[ext_resource path="res://sounds/apple slash.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/bossHit.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/boosSplash.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/Mac quack.wav" type="AudioStream" id=17]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.380392, 0.380392, 0.380392, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Unfade"
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.380392, 0.380392, 0.380392, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 15
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 12
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 11, 260 ), Vector2( 5, 230 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 11, 234 ), Vector2( 11, 260 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.19, 0.19 ), Vector2( 0.18, 0.18 ), Vector2( 0.19, 0.19 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=9]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 33, 260 ), Vector2( 30, 230 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 33, 234 ), Vector2( 33, 260 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.044, 0.044 ), Vector2( 0.042, 0.042 ), Vector2( 0.044, 0.044 ) ]
}

[sub_resource type="DynamicFont" id=12]
size = 180
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=13]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 54, 260 ), Vector2( 54, 230 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 54, 232 ), Vector2( 54, 260 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.19, 0.19 ), Vector2( 0.2, 0.2 ) ]
}

[sub_resource type="DynamicFont" id=16]
size = 40
font_data = ExtResource( 7 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="background" type="Node2D" parent="."]
modulate = Color( 0.380392, 0.380392, 0.380392, 1 )

[node name="Swamp" parent="background" instance=ExtResource( 2 )]
editor/display_folded = true
scale = Vector2( 0.199901, 0.199901 )
z_index = -4
frame = 9

[node name="Fading" type="AnimationPlayer" parent="background/Swamp"]
anims/Fade = SubResource( 1 )
anims/Unfade = SubResource( 2 )

[node name="ui_container" type="Node" parent="."]
editor/display_folded = true

[node name="score" type="Label" parent="ui_container"]
margin_left = 119.0
margin_top = 2.0
margin_right = 139.0
margin_bottom = 17.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "15"
align = 2

[node name="money" type="Label" parent="ui_container"]
editor/display_folded = true
margin_left = 15.0
margin_top = 5.0
margin_right = 23.0
margin_bottom = 16.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "0"

[node name="Sprite" type="Sprite" parent="ui_container/money"]
position = Vector2( -6.94537, 4.71688 )
scale = Vector2( 0.143532, 0.143532 )
texture = ExtResource( 4 )

[node name="Buttons" type="Node2D" parent="."]
z_index = 2

[node name="slowDucks" type="Button" parent="Buttons"]
editor/display_folded = true
margin_left = 11.0
margin_top = 260.0
margin_right = 126.0
margin_bottom = 371.0
rect_scale = Vector2( 0.19, 0.19 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons/slowDucks"]
anims/come = SubResource( 5 )
anims/goAway = SubResource( 6 )
anims/pressed = SubResource( 7 )

[node name="Timer" type="Timer" parent="Buttons/slowDucks"]
wait_time = 3.0
one_shot = true

[node name="Label" type="Label" parent="Buttons/slowDucks"]
margin_left = -6.72406
margin_top = -13.4481
margin_right = 72.2759
margin_bottom = 74.5519
custom_fonts/font = SubResource( 8 )
text = "50"

[node name="addLazer" type="Button" parent="Buttons"]
editor/display_folded = true
margin_left = 33.0
margin_top = 260.0
margin_right = 490.0
margin_bottom = 731.0
rect_scale = Vector2( 0.044, 0.044 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 8 )
flat = true
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons/addLazer"]
anims/come = SubResource( 9 )
anims/goAway = SubResource( 10 )
anims/pressed = SubResource( 11 )

[node name="Label" type="Label" parent="Buttons/addLazer"]
margin_left = -26.0059
margin_top = -100.03
margin_right = 259.994
margin_bottom = 215.97
custom_fonts/font = SubResource( 12 )
text = "50"

[node name="imuneDuck" type="Button" parent="Buttons"]
margin_left = 54.0
margin_top = 260.0
margin_right = 169.0
margin_bottom = 371.0
rect_scale = Vector2( 0.2, 0.2 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 10 )
flat = true
script = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons/imuneDuck"]
anims/come = SubResource( 13 )
anims/goAway = SubResource( 14 )
anims/pressed = SubResource( 15 )

[node name="Label" type="Label" parent="Buttons/imuneDuck"]
margin_left = -4.91321
margin_top = -19.2177
margin_right = 59.0868
margin_bottom = 50.7823
custom_fonts/font = SubResource( 16 )
text = "50"

[node name="sounds" type="Node" parent="."]
editor/display_folded = true

[node name="movingKnife" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 12 )

[node name="background" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 13 )

[node name="appleSlash" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 14 )

[node name="bossHit" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 15 )

[node name="bossSplash" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 16 )

[node name="Quack" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 17 )

[node name="betweenLvls" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="pressed" from="Buttons/slowDucks" to="Buttons/slowDucks" method="_on_slowDucks_pressed"]
[connection signal="timeout" from="Buttons/slowDucks/Timer" to="Buttons/slowDucks" method="_on_Timer_timeout"]
[connection signal="pressed" from="Buttons/addLazer" to="Buttons/addLazer" method="_on_addLazer_pressed"]
[connection signal="pressed" from="Buttons/imuneDuck" to="Buttons/imuneDuck" method="_on_imuneDuck_pressed"]
[connection signal="timeout" from="betweenLvls" to="." method="_on_betweenLvls_timeout"]
